--- a/submission.conf
+++ b/submission.conf
@@ -1,3 +1,8 @@
 modules=python/3.7.2
 model=Network_01R-01
 scenario=1
+export JULIA_DEPOT_PATH=$JULIA_DEPOT_PATH_110
+export PATH=$JULIA_110:$PATH
+export PATH="$GUROBI_811_HOME/bin:$PATH"
+export LD_LIBRARY_PATH="$GUROBI_811_HOME/lib:$LD_LIBRARY_PATH"
+export GRB_LICENSE_FILE="$GUROBI_811_HOME/license/gurobi_client.lic"
