--- a/submission.conf
+++ b/submission.conf
@@ -1,7 +1,7 @@
 modules=python/3.7.2
 model=Network_01R-01
 scenario=1
-export JULIA_DEPOT_PATH=$JULIA_DEPOT_PATH_110
+export JULIA_DEPOT_PATH=$JULIA_DEPOT_PATH_110_CARLETON
 export PATH=$JULIA_110:$PATH
 export PATH="$GUROBI_811_HOME/bin:$PATH"
 export LD_LIBRARY_PATH="$GUROBI_811_HOME/lib:$LD_LIBRARY_PATH"
