--- a/submission.conf
+++ b/submission.conf
@@ -6,3 +6,4 @@ export PATH=$JULIA_110:$PATH
 export PATH="$GUROBI_811_HOME/bin:$PATH"
 export LD_LIBRARY_PATH="$GUROBI_811_HOME/lib:$LD_LIBRARY_PATH"
 export GRB_LICENSE_FILE="$GUROBI_811_HOME/license/gurobi_client.lic"
+srun_options2=-N6
