--- a/submission.conf
+++ b/submission.conf
@@ -1,13 +1,12 @@
 modules=python/3.7.2
 model=Network_03R-01
 scenario=1
-export PATH="$GUROBI_811_HOME/bin:$PATH"
+export GUROBI_HOME=$GUROBI_811_HOME
 export LD_LIBRARY_PATH="$GUROBI_811_HOME/lib:$LD_LIBRARY_PATH"
 export GRB_LICENSE_FILE="$GUROBI_811_HOME/license/gurobi_client.lic"
 srun_options2=-N6
-alloc_method=salloc
 export JULIA_DEPOT_PATH=$JULIA_DEPOT_PATH_110_CARLETON
-export PATH=$JULIA_110:$PATH
+export PATH=$JULIA_120:$PATH
 export LD_LIBRARY_PATH=$APPS_BASE/Ipopt-3.12.13-gcc520/lib:$LD_LIBRARY_PATH
 export PATH=$APPS_BASE/Ipopt-3.12.13-gcc520/bin:$PATH
 modules=gcc/5.2.0
